Project Nijimas {
  database_type: 'PostgreSQL'
  Note: '''
    # Nijimas Database
    **markdown content here**
  '''
}

Table users as U {
  uid char(28) [pk]
  username varchar(255) [not null]
  self_intro text
  profile_image_url varchar(2000)
  country_code char(2)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    username
  }
}

Table posts as P {
  post_id uuid [pk]
  uid char(28) [ref: > U.uid, not null]
  main_category varchar(20) [ref: > MC.category_name, not null]
  post_text text 
  photo_url varchar(2000)
  expense numeric(15, 2) [not null, default: 0]
  location varchar(2000)
  public_type_no char(1) [not null, note: '0:公開、1:フォロワーにのみ公開、2:非公開']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    uid
  }
}

Table post_subcategories as PS {
  post_id uuid [ref: > P.post_id, pk]
  category_no char(1) [pk]
  category_id uuid [ref: > SC.category_id, not null]
}

Table favorites as FA {
  post_id uuid [ref: > P.post_id, pk]
  uid varchar(255) [ref: > U.uid, pk]
  created_at timestamptz [not null, default: `now()`]

   indexes {
    (post_id, uid)
  }
}

Table main_categories as MC {
  category_name varchar(20) [pk]
  created_at timestamptz [not null, default: `now()`]
}

Table sub_categories as SC {
  category_id uuid [pk]
  category_name varchar(50) [unique, not null]
  created_at timestamptz [not null, default: `now()`]
}

Table follows as FO {
  uid char(28) [ref: > U.uid, pk]
  follow_uid char(28) [ref: > U.uid, pk]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (uid, follow_uid)
  }
}

Table expense_summaries {
  uid char(28) [ref: > U.uid, pk]
  year integer [not null, pk]
  month integer [not null, pk]
  main_category varchar(20) [ref: > MC.category_name, not null]
  amount numeric(15, 2) [not null, default: 0]
}

Table subcategory_summaries {
  uid char(28) [ref: > U.uid, pk]
  year integer [not null, pk]
  month integer [not null, pk]
  category_id uuid [ref: > SC.category_id, not null]
  amount numeric(15, 2) [not null, default: 0]
}

Table daily_activity_summaries {
  uid char(28) [ref: > U.uid, pk]
  year integer [not null, pk]
  month integer [not null, pk]
  day integer [not null, pk]
  number integer [not null, default: 0]
  amount numeric(15, 2) [not null, default: 0]
}
